fixed align

--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -19,12 +19,8 @@
 }
 
 .padding-logo {
-    padding: 20px 0;
-}
-
-.padding-phone {
     padding: 40px 0;
-} 
+}
 
 .beauty-text {
     font-family: "Roboto Bold";
